@@ -147,5 +147,12 @@ if deploy_mode?
 		)
 	end
 
+	template "#{install_dir}\\log4net.config" do
+		source "log4net.config.erb"
+		variables(
+			:log_level => node['wt_analytics_ui']['log_level']
+		)
+	end
+
 	share_wrs
 end
