@@ -1,0 +1,47 @@
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<log4net>
+  <appender name="BufferingForwardingAppender" type="log4net.Appender.BufferingForwardingAppender" >
+    <bufferSize value="20"/>
+    <appender-ref ref="LogFileAppender" />
+  </appender>
+
+  <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender" >
+
+    <file type="log4net.Util.PatternString" value="App_Data/logs/analytics-%property{log4net:HostName}" />
+    <appendToFile value="true" />
+    <rollingStyle value="Date" />
+    <datePattern value="-yyyyMMdd.'log'" />
+    <param name="StaticLogFileName" value="false" />
+    <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+
+    <layout type="log4net.Layout.PatternLayout">
+      <header value="-Start-&#13;&#10;" />
+      <footer value="-End-&#13;&#10;" />
+      <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+    </layout>
+  </appender>
+  <!-- Setup the root category, add the appenders and set the default level -->
+  <root>
+    <level value="<%= @log_level %>" />
+    <appender-ref ref="LogFileAppender" />
+  </root>
+  
+  <!-- Specific loggers -->
+  <!--
+    <logger name="Webtrends.Memcached.MemcachedClient">
+      <level value="DEBUG"/>
+    </logger>
+    <logger name="Webtrends.Memcached.SockIOPool">
+      <level value="DEBUG"/>
+    </logger>
+    <logger name="Webtrends.Logging.LogUtil">
+      <level value="DEBUG" />
+    </logger>
+    <logger name="WebTrends.UI.Reporting.Areas.Analytics.Models.Reports">
+      <level value="DEBUG" />
+    </logger>
+    <logger name="Webtrends.Analytics">
+      <level value="DEBUG" />
+	</logger>
+  -->
+</log4net>
